# TosaFlow

./: .gitignore  CMakeLists.txt  README.md  build-tosaflow.sh  lenet_tosa_legacy_save.mlir
include/tosa-flow/: InitAllDialects.h  InitAllPasses.h
include/tosa-flow/Dialect/: CMakeLists.txt
include/tosa-flow/Dialect/Chiplet/: CMakeLists.txt  Chiplet.h  Chiplet.td  Ops.td  Utils.h
include/tosa-flow/Transforms/: CMakeLists.txt  Passes.h  Passes.td
lib/Dialect/: CMakeLists.txt
lib/Dialect/Chiplet/: CMakeLists.txt  Chiplet.cpp  Utils.cpp
lib/Transforms/: CMakeLists.txt  CreateChipletFromTosa.cpp  Passes.cpp  TosaConvPoolFusion.cpp
outputs/: cp1_fused_conv_pool.mlir
pass_outputs/: lenet_2_post_chiplet_loads.mlir  lenet_3_post_chiplet_num.mlir
samples/pytorch/lenet/: lenet.py  lenet_bm.py  lenet_full.py
samples/pytorch/lenet/output/: lenet_tosa.mlir
samples/pytorch/lenet/tests/: lenet_hls.cpp  lenet_tb.cpp
samples/pytorch/resnet18/: resnet18.py
test/Transforms/: conv-pool-fusion.mlir
tools/: CMakeLists.txt
tools/tosa-flow-opt/: CMakeLists.txt  tosa-flow-opt.cpp
